# TShaderToy

./: CMakeLists.txt
shader/: default.fs  pp.fs  ppOld.fs
src/: main.cpp
src/include/: SImage.hpp  shaderman.hpp  tui.hpp  vec2.hpp
